--- a/01_env_init.qmd
+++ b/01_env_init.qmd
@@ -4,7 +4,6 @@ format: html
 ---
 
 
-```{r}
+# %%
 library(pacman)
-p_load(tidyverse, janitor, dlnm)
-```
+p_load(tidyverse, janitor, dlnm, tigris, sf)
