--- a/03_prelim.qmd
+++ b/03_prelim.qmd
@@ -5,27 +5,33 @@ format: html
 
 
 # %% Load data and prepare analytical sample
-pa_birth<- readRDS("~/Documents/pa_births/formatted_data/pa_birth_formatted.rds") |>
-  dplyr::mutate(lat = str_replace(lat, "^0+", ""),
-         long = str_replace(long, "^0+", "")) |>
-  tidyr::drop_na(childmthb, childdayb, childyrb, 
-          lat, long, lop) |>
-  dplyr::filter(lat != "" | long != "",
-                momresstate %in% c("Pennsylvania", "PENNSYLVANIA"))|>
-  dplyr::mutate(delivery_date = as.Date(paste(childyrb, childmthb, childdayb, sep = "-")),
-         #revising start date to 2 weeks before LMP
-         start_date = delivery_date - weeks(lop+2)) |>
-  dplyr::mutate_at(dplyr::vars(lat, long), as.numeric) |>
+pa_birth <- readRDS("~/Documents/pa_births/formatted_data/pa_birth_formatted.rds") |>
+  mutate(
+    lat  = str_replace(lat, "^0+", ""),
+    long = str_replace(long, "^0+", "")
+  ) |>
+  drop_na(childmthb, childdayb, childyrb, lat, long, lop) |>
+  filter(
+    lat  != "",
+    long != "",
+    momresstate %in% c("Pennsylvania", "PENNSYLVANIA")
+  ) |>
+  mutate(
+    delivery_date = as.Date(paste(childyrb, childmthb, childdayb, sep = "-")),
+    # revising start date to 2 weeks before LMP
+    start_date = delivery_date - weeks(lop + 2)
+  ) |>
+  mutate(across(c(lat, long), as.numeric)) |>
   rename(end_date = delivery_date) |>
   mutate(num_exp_days = as.numeric(end_date - start_date) + 1) |>
   select(
-    c(id, lop, lat, long, start_date, end_date,
-      mothage, mothedu, mothrace, mothhisp, marital, mwic, plural,
-      momhtfeet, momhtinches, mppwgt, #calculate bmi
-      payment,
-      smkpr, smkftm, smkstm, smkltm, #code smoke_preg to yes if any of these have values between 01 and 98
-      sex, bweight, deceased,
-      r1, r2, r3, r4)) |>
+    id, lop, lat, long, start_date, end_date,
+    mothage, mothedu, mothrace, mothhisp, marital, mwic, plural,
+    momhtfeet, momhtinches, mppwgt, payment,
+    smkpr, smkftm, smkstm, smkltm,
+    sex, bweight, deceased,
+    r1, r2, r3, r4
+  ) |>
   mutate(
     plural = ifelse(plural == 9, NA, plural),
     smoke_preg = as.factor(case_when(
@@ -34,47 +40,49 @@ pa_birth<- readRDS("~/Documents/pa_births/formatted_data/pa_birth_formatted.rds"
     )),
     ppbmi = ifelse(
       !is.na(mppwgt) & !is.na(momhtfeet),
-      as.numeric(mppwgt) / 
+      as.numeric(mppwgt) /
         ((as.numeric(momhtfeet) * 12 + as.numeric(momhtinches))^2) * 703,
       NA
     ),
     mothedu = case_when(
-    mothedu %in% 1:3 ~ "High school or less",
-    mothedu %in% 4:6 ~ "Degree",
-    mothedu %in% 7:8 ~ "Postgraduate",
-    mothedu == 9 ~ NA_character_
-  ),
-  mothrace = case_when(
-    mothrace %in% 1 ~ "white",
-    mothrace %in% 2 ~ "black",
-    mothrace %in% 3:15 ~ "other",
-    mothrace %in% 16:18 ~ NA_character_
-  ),
-  mothhisp = case_when(
-    mothhisp %in% 1 ~ "not_hisp",
-    mothhisp %in% 2:4 ~ "hispanic",
-    mothhisp == 5 ~ "other",
-    mothhisp == 9 ~ NA_character_
-  ),
-  payment = case_when(
-    payment == 1 ~ "private_ins",
-    payment == 2 ~ "medicaid",
-    payment == 3 ~ "self_pay",
-    payment == 4 ~ "other",
-    payment == 9 ~ NA_character_
-  ),
-  ptb = as.factor(if_else(lop < 37, "preterm", "term")),
-  lbw = as.factor(if_else(bweight < 2500, "LBW", "normal"))
+      mothedu %in% 1:3 ~ "High school or less",
+      mothedu %in% 4:6 ~ "Degree",
+      mothedu %in% 7:8 ~ "Postgraduate",
+      mothedu == 9 ~ NA_character_
+    ),
+    mothrace = case_when(
+      mothrace == 1 ~ "white",
+      mothrace == 2 ~ "black",
+      mothrace %in% 3:15 ~ "other",
+      mothrace %in% 16:18 ~ NA_character_
+    ),
+    mothhisp = case_when(
+      mothhisp == 1 ~ "not_hisp",
+      mothhisp %in% 2:4 ~ "hispanic",
+      mothhisp == 5 ~ "other",
+      mothhisp == 9 ~ NA_character_
+    ),
+    payment = case_when(
+      payment == 1 ~ "private_ins",
+      payment == 2 ~ "medicaid",
+      payment == 3 ~ "self_pay",
+      payment == 4 ~ "other",
+      payment == 9 ~ NA_character_
+    ),
+    ptb = as.factor(if_else(lop < 37, "preterm", "term")),
+    lbw = as.factor(if_else(bweight < 2500, "LBW", "normal"))
   ) |>
   select(-c(smkpr, smkftm, smkstm, smkltm, mppwgt, momhtfeet, momhtinches)) |>
-  filter(mothage>15 & mothage<50,
-        lop>23) |>
+  filter(mothage > 15 & mothage < 50, lop > 23) |>
   mutate(
     sex    = recode(sex, "Male" = "M", "Female" = "F"),
     ga     = floor(as.numeric(lop)),
     b_wght = as.numeric(bweight)
   ) |>
-  left_join(olsen_ref |> select(sex, ga, mean_bw, sd_bw, p10_bw, p90_bw), by = c("sex", "ga")) |>
+  left_join(
+    olsen_ref |> select(sex, ga, mean_bw, sd_bw, p10_bw, p90_bw),
+    by = c("sex", "ga")
+  ) |>
   mutate(
     bw_z_scr = if_else(
       !is.na(sex) & !is.na(ga) & !is.na(b_wght) & !is.na(mean_bw) & !is.na(sd_bw),
@@ -82,16 +90,16 @@ pa_birth<- readRDS("~/Documents/pa_births/formatted_data/pa_birth_formatted.rds"
       NA_real_
     ),
     sga = as.factor(if_else(
-      is.na(b_wght) | is.na(p10_bw), NA_character_, 
+      is.na(b_wght) | is.na(p10_bw), NA_character_,
       if_else(b_wght < p10_bw, "SGA", "AGA")
     )),
     lga = as.factor(if_else(
-      is.na(b_wght) | is.na(p90_bw), NA_character_, 
+      is.na(b_wght) | is.na(p90_bw), NA_character_,
       if_else(b_wght > p90_bw, "LGA", "AGA")
-    )) |>
+    ))
+  ) |>
   select(-c(mean_bw, sd_bw, bweight, ga, p10_bw, p90_bw)) |>
   mutate(across(where(is.character), as.factor))
-
 
 #table of missing variable percentages
 # %%
@@ -103,13 +111,169 @@ pa_birth_missing<- pa_birth |>
 #exposure data
 # %%
 pm_data<- readRDS("~/Documents/ap_brith_out_pa_reg/air_poll_pj/PM_extraction_20251112_105736.rds") |>
+  filter(raster_has_data == "TRUE", id %in% pa_birth$id) |>
   select(id, raster_value) |>
   rename(pm = raster_value)
 
 bc_data<- readRDS("~/Documents/ap_brith_out_pa_reg/air_poll_pj/BC_extraction_20251112_112830.rds") |>
+  filter(raster_has_data == "TRUE", id %in% pa_birth$id) |>
   select(id, raster_value) |>
   rename(bc = raster_value)
 
+#are there any mismatched ids between the two exposure datasets?
+mismatched_ids <- setdiff(pm_data$id, bc_data$id)
+
+#subset pa_birth to only include ids present in both exposure datasets
+pa_bd <- pa_birth |>
+  mutate(id = as.character(id)) |>
+  filter(id %in% as.character(pm_data$id))
+
+#export these files to a rda file
+save(pa_bd, pm_data, bc_data, 
+  file = "~/Documents/ap_brith_out_pa_reg/data/pa_analy_data.rda")
+
+
+
+  
+# %% load processed data
+load("~/Documents/ap_brith_out_pa_reg/data/pa_analy_data.rda")
+
+#trim exposures to weeks before LMP to 20 weeks gestation
+bc_data<- bc_data |>
+  mutate(bc = map(bc, ~ .x[1:154]))
+
+pm_data<- pm_data |>
+  mutate(bc = map(pm, ~ .x[1:154]))
+
+
+# %%
+# Your variables
+continuous_vars <- c("mothage", "ppbmi", "lop", "b_wght", "bw_z_scr")
+categorical_vars <- c("mothedu", "mothrace", "mothhisp", "marital", "mwic", 
+                      "plural", "payment", "deceased", "smoke_preg", 
+                      "ptb", "lbw", "sga", "lga")
+
+# Function to summarize continuous variables
+summarize_continuous <- function(data, var) {
+  data %>%
+    summarise(
+      median = round(median({{var}}, na.rm = TRUE), 1),
+      p25 = round(quantile({{var}}, 0.25, na.rm = TRUE), 1),
+      p75 = round(quantile({{var}}, 0.75, na.rm = TRUE), 1)
+    ) %>%
+    mutate(stat = paste0(median, " (", p25, "–", p75, ")")) %>%
+    select(stat)
+}
+
+# Function to summarize categorical variables with level labels
+summarize_categorical <- function(data, var) {
+  data %>%
+    count({{var}}, name = "n") %>%
+    mutate(p = round(n / sum(n) * 100, 1)) %>%
+    mutate(stat = paste0({{var}}, ": ", n, " (", p, "%)")) %>%
+    summarise(stat = paste(stat, collapse = ", "))
+}
+
+# Create summary for total data
+total_summary <- bind_rows(
+  map_dfr(continuous_vars, ~ {
+    summarize_continuous(pa_bd, !!sym(.x)) %>% mutate(variable = .x)
+  }),
+  map_dfr(categorical_vars, ~ {
+    summarize_categorical(pa_bd, !!sym(.x)) %>% mutate(variable = .x)
+  })
+) %>%
+  select(variable, stat) %>%
+  rename(Total = stat)
+
+# Add total N as a separate first row
+total_n <- nrow(pa_bd)
+n_row <- tibble(variable = "N", Total = as.character(total_n))
+total_summary <- bind_rows(n_row, total_summary)
+
+# Helper function for grouped summaries
+create_grouped_summary <- function(data, group_var, prefix) {
+  group_var_name <- as.character(substitute(group_var))
+  
+  # Remove rows with NA in grouping variable
+  data_clean <- data %>% filter(!is.na({{group_var}}))
+  
+  # Continuous variables
+  cont_summary <- data_clean %>%
+    group_by({{group_var}}) %>%
+    summarise(across(all_of(continuous_vars), 
+                     ~ paste0(round(median(.x, na.rm = TRUE), 1), " (", 
+                              round(quantile(.x, 0.25, na.rm = TRUE), 1), "–", 
+                              round(quantile(.x, 0.75, na.rm = TRUE), 1), ")")),
+              .groups = "drop") %>%
+    pivot_longer(cols = -1, names_to = "variable", values_to = "stat") %>%
+    pivot_wider(names_from = 1, values_from = stat)
+  
+  # Categorical variables - with level labels
+  cat_vars_to_use <- setdiff(categorical_vars, group_var_name)
+  
+  cat_summary <- map_dfr(cat_vars_to_use, function(var) {
+    data_clean %>%
+      group_by({{group_var}}, .data[[var]]) %>%
+      summarise(n = n(), .groups = "drop_last") %>%
+      mutate(p = round(n / sum(n) * 100, 1),
+             stat = paste0(.data[[var]], ": ", n, " (", p, "%)")) %>%
+      group_by({{group_var}}) %>%
+      summarise(stat = paste(stat, collapse = ", "), .groups = "drop") %>%
+      mutate(variable = var)
+  }) %>%
+    pivot_wider(names_from = 1, values_from = stat)
+  
+  # Combine
+  result <- bind_rows(cont_summary, cat_summary)
+  
+  # Get group levels and their N counts
+  group_counts <- data_clean %>% 
+    count({{group_var}}) %>%
+    arrange({{group_var}})
+  
+  group_levels <- group_counts %>% pull({{group_var}})
+  group_ns <- group_counts %>% pull(n)
+  
+  # Create N row
+  n_row_data <- tibble(variable = "N")
+  for (i in seq_along(group_levels)) {
+    level <- as.character(group_levels[i])
+    n_count <- group_ns[i]
+    n_row_data[[level]] <- as.character(n_count)
+  }
+  
+  # Add N row at the top
+  result <- bind_rows(n_row_data, result)
+  
+  # Rename columns
+  for (i in seq_along(group_levels)) {
+    level <- as.character(group_levels[i])
+    new_name <- paste0(prefix, ": ", level)
+    result <- result %>%
+      rename(!!new_name := all_of(level))
+  }
+  
+  return(result)
+}
+
+# Create summaries for each grouping variable
+sex_summary <- create_grouped_summary(pa_bd, sex, "Sex")
+ptb_summary <- create_grouped_summary(pa_bd, ptb, "PTB")
+lbw_summary <- create_grouped_summary(pa_bd, lbw, "LBW")
+sga_summary <- create_grouped_summary(pa_bd, sga, "SGA")
+lga_summary <- create_grouped_summary(pa_bd, lga, "LGA")
+
+# Combine all summaries
+final_table <- total_summary %>%
+  full_join(sex_summary, by = "variable") %>%
+  full_join(ptb_summary, by = "variable") %>%
+  full_join(lbw_summary, by = "variable") %>%
+  full_join(sga_summary, by = "variable") %>%
+  full_join(lga_summary, by = "variable")
+
+write_csv(final_table, 
+            "~/Documents/ap_brith_out_pa_reg/results/pa_birth_summary_tbl.csv")
 
 
 # %% create a pattern map to show density of observations with PA state boundary using ggplot
